# AzureFunctions

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: main.yml  main_xukecheng.yml
base64_to_cos/: __init__.py
get_feishu_changelog/: __init__.py
src/: index.py
src/cos_python_sdk_v5-1.9.19.dist-info/: METADATA  RECORD
src/crcmod-1.7.dist-info/: RECORD
src/dicttoxml-1.7.4.dist-info/: RECORD
upload_html_images_to_cos/: __init__.py  function.json
upload_to_cos/: __init__.py
