[tool.poetry]
name = "azurefunctions"
version = "0.1.0"
description = ""
authors = ["xukecheng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.17.0"
cos-python-sdk-v5 = "^1.9.26"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
